# buddy-teleport

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json
.claude/: settings.local.json
.claude/commands/: buddy-teleport.md
buddy-desktop/: LICENSE  index.html  package.json  pnpm-lock.yaml  tsconfig.json
buddy-desktop/ble-prototype/: README.md  fixtures.js  protocol.js  protocol.test.js  prototype.js  prototype.test.js
buddy-desktop/bridge/: package.json
buddy-desktop/bridge/src/: buddyProcess.js  index.d.ts  index.js  mcpClient.js  protocol.js  sidecar.js  sidecarProtocol.js  stateMapper.js  toolService.js
buddy-desktop/bridge/test/: mcpClient.test.js  sidecarProtocol.test.js  stateMapper.test.js  toolService.test.js
buddy-desktop/scripts/: check-scaffold.mjs  smoke-installed-buddy.mjs  smoke.mjs
buddy-desktop/src/: App.tsx  main.tsx  styles.css
buddy-desktop/src-tauri/: Cargo.toml  tauri.conf.json
buddy-desktop/src-tauri/capabilities/: default.json
buddy-desktop/src-tauri/src/: ble.rs  bridge_process.rs  buddy_client.rs  buddy_poll.rs  buddy_sidecar.rs  commands.rs  lib.rs  main.rs  mascot_state.rs  mascot_window.rs  tray.rs
buddy-desktop/src/__tests__/: appState.test.mjs  (+8 more)
docs/decisions/: 2026-05-19-ble-implementation-path.md
docs/review/: buddy-desktop-interaction-prototype.html  design-review.html  final-plan-review.html  user-stories-review.html
scripts/: buddy-teleport-out.sh  build-buddy-sidecar.sh  check-doc-boundaries.mjs  check-manual-gates.mjs  smoke-teleport-runtime.mjs  smoke-teleport-tools.mjs  verify-automated.mjs
(+38 files in other folders)
