[package]
name = "buddy-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "buddy_desktop"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPanel", "NSWindow", "NSView"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSURL"] }
objc2-web-kit = { version = "0.2", features = ["WKWebView", "WKWebViewConfiguration"] }
