[package]
name = "buddy-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "buddy_desktop"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = "2"
